Fix z-index for header

--- a/main/main-site/main.css
+++ b/main/main-site/main.css
@@ -32,6 +32,7 @@ body {
     gap: 5px;
     font-size: 24px;
     white-space: nowrap;
+    z-index: 1;
 }
 
 .header > .link {
