--- a/main/main-site/popup.css
+++ b/main/main-site/popup.css
@@ -42,6 +42,7 @@
     border: none;
     border-radius: 1em;
     width: 100%;
+    height: 150px;
     padding: 10px 15px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 16;
